--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/Vaporjawn/sensible-node#readme",
   "dependencies": {
     "api": "^4.5.1",
+    "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "express": "^4.18.1"
   },
